# ahmari-bookstore-assistant

./: .env.example  .env.remote  .gitignore  Makefile  README.md  TASKLIST.md  _chat.txt  debug_output.txt  docker-compose.yml  package-lock.json  package.json
.agent/workflows/: deploy.md  git-push.md  vps-pull.md
ai-processor/: Dockerfile  README.md  ai_parser.py  book_researcher.py  caption_analyzer.py  gemini_client.py  list_models.py  littlerazy_parser.py  main.py  models.py  output_formatter.py  parser.py  pyproject.toml  requirements.txt  test_api_keys.py  test_e2e.py  test_hybrid_approach.py  test_style_generation.py
ai-processor/config/: parser-rules.yaml  style-profile.json
ai-processor/poster/: __init__.py  analyzer.py  api_models.py  background.py  generator.py  layout.py  presets.py  renderer.py  test_poster.py
ai-processor/providers/: base.py  cliproxy_provider.py  gemini_backup.py  router.py
ai-processor/tests/: test_ai_parser.py  test_api.py  test_gemini.py  test_parser.py
database/: init.js  package-lock.json  package.json  schema.sql
docs/: BAILEYS-SETUP-GUIDE.md  CHANGELOG.md  DEPLOYMENT-NOTES.md  DEPLOYMENT.md  ROADMAP.md  TROUBLESHOOTING.md  architecture.md
docs/plans/: 2025-11-28-whatsapp-bookstore-bot-design.md  2025-11-28-whatsapp-bookstore-bot-implementation.md  discussion-with-gemini.json  (+4 more)
scheduler/: Dockerfile  package.json
scripts/: health-check.sh  restart-wa-bot.sh  vps-setup.sh  watchdog-wa-bot.sh
telegram-bot/: package.json  tsconfig.json
wa-bot/: .dockerignore  Dockerfile  jest.config.js  package.json  tsconfig.json
(+49 files in other folders)
